--- a/gen/gen.html
+++ b/gen/gen.html
@@ -3,7 +3,7 @@
   <head>
     <title>Page Title</title>
     
-    <link ref="stylesheet" type="css/text" href="https://youngitunsmedia.000webhostapp.com/gen/gen.css">
+    <link ref="stylesheet" type="css/text" href="/gen/gen.css">
   </head>
   <body>
         <div id="result"></div>
@@ -14,6 +14,6 @@
             </form>
 
         </div> 
-        <script defer src="https://youngitunsmedia.000webhostapp.com/gen/gen.js"></script>
+        <script defer src="/gen/gen.js"></script>
   </body>
 </html>
